<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/toolsFragment"
        android:icon="@drawable/ic_tools"
        android:title="@string/nav_tools" />
    <item
        android:id="@+id/analyzerFragment"
        android:icon="@drawable/ic_analyzer"
        android:title="@string/nav_analyzer" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/filesFragment"
        android:icon="@drawable/ic_files"
        android:title="@string/nav_files" />
</menu>
